fixed layout issues

--- a/src/app/modules/header/header.component.scss
+++ b/src/app/modules/header/header.component.scss
@@ -34,7 +34,7 @@
   bottom: .313rem;
 }
 
-.header__logo-item svg {
+.header__logo-item img {
   width: 100%;
   height: 100%;
 }
